--- a/SST_HTML/login.html
+++ b/SST_HTML/login.html
@@ -4,27 +4,49 @@
         <link rel="stylesheet" type="text/css" href="Assi2.css">
     </head>
 <body>
+    <nav>
+        <div class="menu-item"><a href="Assi4.html">Home</a></div>
+        <div class="menu-item"><a href="login.html">Login</a></div>
+        <div class="menu-item"><a href="reg.html">Registerion</a></div>
+        <div class="menu-item"><a href="buymarket.html">Buy Product</a></div>
+    </nav>
     <header>
-        <img src="he.jpg" height="100px" width="200px"/>
+        <img src="epic.webp" height="100px" width="200px"/>
     </header>
-    <a href="Assi4.html"target="_blank">Home</a>
-<a href="reg.html"target="_blank">Registerion</a>
-<a href="login.html"targef="_blank">Login</a>
+   
     <table style ="width:50%" border="0" bgcolor="white">
     <tr>
         <td>UserName</td>
-        <td> <input type="text" name="username"></td>
+        <td> <input type="text" name="username" id="texta"></td>
     </tr>
     <tr>
         <td>Password</td>
-        <td> <input type="text" name="Password"></td>
+        <td> <input type="password" name="Password" id="textb"></td>
     </tr>
     <tr>
         <td></td>
-        <td><input type="submit" value="login">
+        <td><input type="submit" onclick="login()" value="login"></td>
         </td>
     </tr>
     </table>
+    <script>
+        function login() {
+          var f=document.getElementById("texta").value;
+          var s=document.getElementById("textb").value;
+          if(f== "admin" && s=='123')
+          {
+            alert("You have succesfully logged in steam");
+            //document.write("hello steam");
+            window.location=("Assi4.html");//redirect to another web page 
+          }
+          else{
+            alert("incorrect  .Enter correct user name or password");
+          }
+
+
+        }
+        
+    </script>
 
 
 <div></div>
@@ -35,4 +57,3 @@
 
 </html>
 </body>
-  
