--- a/SST_HTML/product.html
+++ b/SST_HTML/product.html
@@ -4,19 +4,23 @@
         <link rel="stylesheet" type="text/css" href="Assi2.css">
     </head>
     <body>
+ 
+        <nav>
+            <div class="menu-item"><a href="Assi4.html">Home</a></div>
+            <div class="menu-item"><a href="login.html">Login</a></div>
+            <div class="menu-item"><a href="reg.html">Registerion</a></div>
+            <div class="menu-item"><a href="buymarket.html">Buy Product</a></div>
+        </nav>
         <header>
-            <img src="din.jpg" height="100px" width="200px"/>
+            <img src="epic.webp" height="100px" width="200px"/>
         </header>
-        <a href="Assi4.html"target="_blank">Home</a>
-<a href="reg.html"target="_blank">Registerion</a>
-<a href="login.html"targef="_blank">Login</a>
-<table style ="width:50%" border="0" bgcolor="white">
+     <table>
     <tr>
         <td>Producte Name</td>
         <td> <input type="text" name="Productename"></td>
     </tr>
     <tr>
-        <td>qty</td>
+        <td>Quantity</td>
         <td> <input type="number" name="amount"></td>
     </tr>
     <tr>
@@ -28,7 +32,8 @@
         <td><a href="order.html"targef="_blank">Order Now</a>
         </td>
     </tr>
-</table>
+    </table>
+
 <div></div>
 
         <footer>
