--- a/SST_HTML/reg.html
+++ b/SST_HTML/reg.html
@@ -4,66 +4,18 @@
         <link rel="stylesheet" type="text/css" href="Assi2.css">
     </head>
     <body>
+        <nav>
+            <div class="menu-item"><a href="Assi4.html">Home</a></div>
+            <div class="menu-item"><a href="login.html">Login</a></div>
+            <div class="menu-item"><a href="reg.html">Registerion</a></div>
+            <div class="menu-item"><a href="buymarket.html">Buy Product</a></div>
+        </nav>
         <header>
-            <img src="din.jpg" height="100px" width="200px"/>
+            <img src="epic.webp" height="100px" width="200px"/>
         </header>
-        <a href="Assi4.html"target="_blank">Home</a>
-<a href="reg.html"target="_blank">Registerion</a>
-<a href="login.html"targef="_blank">Login</a>
+        
 
-<table style ="width:50%" border="0" bgcolor="white">
-    <tr>
-        <td>Name</td>
-        <td> <input type="text" name="name"></td>
-    </tr>
-    <tr>
-        <td>Age</td>
-        <td> <input type="age" name="Age"></td>
-    </tr>
-    <tr>
-        <td>Gender</td>
-        <td><input type="radio" name="Gender" value="Male"  >Male 
-            <input type="radio" name="Gender" value="Male"  >Female</td>
-    </tr>
-    <tr>
-        <td>Email</td>
-        <td><input type="email" name="Email" >
-        </tr>
-    <tr>
-            <td>District</td>
-            <td><select name="district">
-                <option value="1"> Kottayam</option>
-                <option value="2" selected="selected">idukki </option> 
-                <option value="3">Ernakulam</option>
-                <option value="4">thrisurre</option>
-                <option value="5">palakade</option>
-                <option value="6">pathanamthitha</option>
-                <option value="7">kasarkode</option>
-                <option value="8">kannur</option>
-                <option value="9">koyikode</option>
-                <option value="10">malapuram</option>
-                <option value="11">alapuzha</option>
-                <option value="12">kollam</option>
-                <option value="13">vayanadu</option>
-                <option value="14">thiruvanathapuram</option>
-            </select>
-     </tr>
-     <tr>
-        <td>Address</td>
-        <td><textarea name="Address" rows="2" cols="20"></textarea>
-        </td>
-    </tr>
-    <tr>
-        <td></td>
-        <td><input type="submit" value="Submit">
-            <input type="reset" value="Reset">
-        </td>
-    </tr>
-
-
-
-
-</table>
+ 
 
     </body>
 <table style ="width:50%" border="0" bgcolor="white">
